--- a/less/navigation.less
+++ b/less/navigation.less
@@ -32,8 +32,7 @@
         width: 100%;
         justify-content: space-around;
       }
-      
-      
+
       a {
         font-size: 1.6rem;
         color: @font-color;
@@ -42,3 +41,10 @@
     }
   }
 } // .main-navigation
+
+.change {
+  -ms-transform: rotate(360deg); /* IE 9 */
+  -webkit-transform: rotate(360deg); /* Chrome, Safari, Opera */
+  transform: rotate(360deg);
+  transition-duration: 5s;
+}
