--- a/css/index.css
+++ b/css/index.css
@@ -366,3 +366,22 @@ img {
   transform: rotate(360deg);
   transition-duration: 5s;
 }
+.slide {
+  position: absolute;
+  left: -100px;
+  background: blue;
+  -webkit-animation: slide 0.5s forwards;
+  -webkit-animation-delay: 2s;
+  animation: slide 6s forwards;
+  animation-delay: 0;
+}
+@-webkit-keyframes slide {
+  100% {
+    left: 0;
+  }
+}
+@keyframes slide {
+  100% {
+    left: 0;
+  }
+}
