--- a/less/home-page.less
+++ b/less/home-page.less
@@ -116,3 +116,27 @@
   transform: rotate(360deg);
   transition-duration: 5s;
 }
+
+.slide {
+  position: absolute;
+  left: -100px;
+  // width: 100px;
+  // height: 100px;
+  background: blue;
+  -webkit-animation: slide 0.5s forwards;
+  -webkit-animation-delay: 2s;
+  animation: slide 6s forwards;
+  animation-delay: 0;
+}
+
+@-webkit-keyframes slide {
+  100% {
+    left: 0;
+  }
+}
+
+@keyframes slide {
+  100% {
+    left: 0;
+  }
+}
